Apply suggestions from errorprone checker
Further to commit 3a183621bff7918f2f3eb2a3d6a0f86689b43ea6, although
it is sunny today, apply the suggestions from errorprone.